--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: http://graz.io
+    title: Personal portfolio for Sebastian Graz
   - url: http://dev.welaika.com
     title: weLaika Software Development
   - url: http://www.beerfestivalbuddy.com
